Bug #13519
pkcs11_tpm: symbol 'hPrivateLeafKey' is multiply-defined
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol 'hPrivateLeafKey' is multiply-defined: (file pics/loadsave.o type=OBJT; file pics/tpm_specific.o type=OBJT); ld: fatal: file processing errors. No output written to pkcs11_tpm.so.1 collect2: error: ld returned 1 exit status *** Error code 1 /usr/bin/rm -f /code/illumos-gate/proto/root_i386/usr/lib/security/pkcs11_tpm.so; /usr/bin/ln -s pkcs11_tpm.so.1 /code/illumos-gate/proto/root_i386/usr/lib/security/pkcs11_tpm.so dmake: Warning: Target `install' not remade because of errors Current working directory /code/illumos-gate/usr/src/lib/pkcs11/pkcs11_tpm/i386
Testing done: build/install/boot
Updated by Electric Monk about 1 month ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b8ccc4133d4adaea81b30537c9a156ae726b2146
commit b8ccc4133d4adaea81b30537c9a156ae726b2146 Author: Toomas Soome <tsoome@me.com> Date: 2021-03-12T17:47:44.000Z 13519 pkcs11_tpm: symbol 'hPrivateLeafKey' is multiply-defined Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Jason King <jason.brian.king+illumos@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>