13519 pkcs11_tpm: symbol 'hPrivateLeafKey' is multiply-defined Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Jason King <jason.brian.king+illumos@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>